--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
+    "sonner": "^2.0.6",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
