--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,14 +14,19 @@
     "@heroui/react": "^2.7.9",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.15.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.0",
     "sonner": "^2.0.6",
-    "tailwindcss": "^4.1.7"
+    "tailwind-variants": "^1.0.0",
+    "tailwindcss": "^4.1.7",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
